# lampara

./: .gitmodules  CMakeLists.txt  application.vala  helpers.c  main.gresource.xml  main.vala  root_window.glade  root_window.vala
